# UOM-MAST90106-Group-26

./: .gitignore  README.md
Classification/: README.md  classify.html  index.html  main.py  query.html
Classification GUI/: README.md  app-bi.py  app.py  run-bi.sh  run.sh
GPS/: Geocoding.py  image_Coordinates_and_Time.ipynb  train6000_Co_Dt.csv
Jupyter/: Image Processing.ipynb
Jupyter/Evaluation/: Evaluation.ipynb  Prediction.ipynb  Save Model.ipynb  crack_utils.py  eval_utils.py  labels.csv  prediction.csv
Jupyter/Modelling-Binary/: CNN - Modelling (Binary + AdpGauThresh + Embedded TL).ipynb  CNN - Modelling (Binary + AdpGauThresh + Inception).ipynb  CNN - Modelling (Binary + AdpGauThresh + ResNet).ipynb  CNN - Modelling (Binary + AdpGauThresh + Standalone TL).ipynb  CNN - Modelling (Binary + AdpGauThresh + VGG).ipynb  CNN - Modelling (Binary + CC + Embedded TL).ipynb  CNN - Modelling (Binary + CC + Inception).ipynb  CNN - Modelling (Binary + CC + ResNet).ipynb  CNN - Modelling (Binary + CC + Standalone TL).ipynb  CNN - Modelling (Binary + CC + VGG).ipynb  copy.sh  crack_utils.py  (+21 more)
Labels/: 0001-1500.csv  1501-3000.csv  3001-4500.csv  4501-6000.csv  all_prediction.csv  labels.csv
Non-NN/: CMakeLists.txt  main.cpp
Pre-Processing/: CMakeLists.txt  main.cpp
Preprocessing/: .clang-format
Re-Label/: main.cpp
Summary/: evaluation.xlsx  summary_binary.xlsx  summary_multinomial.xlsx
Tutorial/: 1 Foundations.html  3 Convolutions and Pooling.html  4 Convolutional Neural Networks.html  5 Image Classification.html  6 Object Detection.html
web/: app.py
(+572 files in other folders)
